[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bevy_ecs_tilemap = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
