[package]
name = "bevy-tilegame-base"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
noise = "0.8.2"
bresenham = "0.1.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
